Converge transport delivery handoff