@@ -1,10 +1,11 @@
 package com.xa.mass.transport.runtime.delivery;
 
+import com.xa.mass.transport.model.AdapterDispatchRequest;
+import com.xa.mass.transport.model.AdapterEndpoint;
 import com.xa.mass.transport.model.DispatchOutcome;
 import com.xa.mass.transport.model.DispatchOutcomeStatus;
-import com.xa.mass.transport.model.TransportDispatchEnvelope;
-import com.xa.mass.transport.packet.PacketType;
-import com.xa.mass.transport.packet.TransportPacket;
+import com.xa.mass.transport.model.TaskDispatchContent;
+import com.xa.mass.transport.model.TaskDispatchExecutionContext;
 import org.junit.jupiter.api.Test;
 
 import java.util.List;
@@ -23,8 +24,8 @@ class TransportDeliveryServiceTest {
 
         List<DispatchOutcome> outcomes = service.sendDirect(
                 "websocket",
-                List.of(envelope("msg-1", "worker-1")),
-                envelope -> true,
+                List.of(request("msg-1", "worker-1")),
+                request -> true,
                 "unavailable"
         );
 
@@ -39,8 +40,8 @@ class TransportDeliveryServiceTest {
 
         List<DispatchOutcome> outcomes = service.sendDirect(
                 "socket",
-                List.of(envelope("msg-1", "worker-1")),
-                envelope -> false,
+                List.of(request("msg-1", "worker-1")),
+                request -> false,
                 "unavailable"
         );
 
@@ -56,7 +57,7 @@ class TransportDeliveryServiceTest {
 
         List<DispatchOutcome> outcomes = service.sendDirect(
                 "websocket",
-                List.of(envelope("msg-1", "worker-1")),
+                List.of(request("msg-1", "worker-1")),
                 null,
                 "dispatcher context is unavailable"
         );
@@ -74,8 +75,8 @@ class TransportDeliveryServiceTest {
 
         List<DispatchOutcome> outcomes = service.sendDirect(
                 "websocket",
-                List.of(invalidEnvelope("msg-1", null)),
-                envelope -> {
+                java.util.Collections.singletonList(null),
+                request -> {
                     called.set(true);
                     return true;
                 },
@@ -94,8 +95,8 @@ class TransportDeliveryServiceTest {
 
         List<DispatchOutcome> outcomes = service.sendDirect(
                 "socket",
-                List.of(envelope("msg-1", "worker-1")),
-                envelope -> {
+                List.of(request("msg-1", "worker-1")),
+                request -> {
                     throw new IllegalStateException("write failed");
                 },
                 "unavailable"
@@ -112,8 +113,8 @@ class TransportDeliveryServiceTest {
     void directStatsByAdapterNormalizeAdapterIds() {
         TransportDeliveryService service = service();
 
-        service.sendDirect(" WebSocket ", List.of(envelope("msg-1", "worker-1")), envelope -> true, "unavailable");
-        service.sendDirect("websocket", List.of(envelope("msg-2", "worker-2")), envelope -> false, "unavailable");
+        service.sendDirect(" WebSocket ", List.of(request("msg-1", "worker-1")), request -> true, "unavailable");
+        service.sendDirect("websocket", List.of(request("msg-2", "worker-2")), request -> false, "unavailable");
 
         TransportDirectDeliveryStats stats = service.directStatsByAdapter().get("websocket");
         assertEquals(1L, stats.getSentItems());
@@ -123,31 +124,31 @@ class TransportDeliveryServiceTest {
     @Test
     void pollReturnsQueuedItems() {
         TransportDeliveryService service = service();
-        service.enqueue("polling", List.of(envelope("msg-1", "worker-1")));
+        service.enqueue("polling", List.of(request("msg-1", "worker-1")));
 
-        assertEquals(List.of("msg-1"), service.pollEnvelopes("polling", "worker-1", 10, 0).stream()
-                .map(envelope -> envelope.getPacket().messageId())
+        assertEquals(List.of("msg-1"), service.pollItems("polling", "worker-1", 10, 0).stream()
+                .map(item -> item.content().messageId())
                 .toList());
     }
 
     @Test
     void pollUsesCanonicalAdapterAndRouteKeys() {
         TransportDeliveryService service = service();
-        service.enqueue("polling", List.of(envelope("delivery-msg-1", " Polling ", " group-route-1 ", "msg-1", " worker-1 ")));
+        service.enqueue("polling", List.of(request("delivery-msg-1", " Polling ", " group-route-1 ", "msg-1", " worker-1 ")));
 
-        assertEquals(List.of("msg-1"), service.pollEnvelopes("polling", "worker-1", 10, 0).stream()
-                .map(envelope -> envelope.getPacket().messageId())
+        assertEquals(List.of("msg-1"), service.pollItems("polling", "worker-1", 10, 0).stream()
+                .map(item -> item.content().messageId())
                 .toList());
     }
 
     @Test
     void selectedWorkerPollDoesNotDrainAnotherWorkerSharingRouteKey() {
         TransportDeliveryService service = service();
-        service.enqueue("polling", List.of(envelope("delivery-msg-1", "polling", "group-route-1", "msg-1", "worker-2")));
+        service.enqueue("polling", List.of(request("delivery-msg-1", "polling", "group-route-1", "msg-1", "worker-2")));
 
-        assertTrue(service.pollEnvelopes("polling", "worker-1", 10, 0).isEmpty());
-        assertEquals(List.of("msg-1"), service.pollEnvelopes("polling", "worker-2", 10, 0).stream()
-                .map(envelope -> envelope.getPacket().messageId())
+        assertTrue(service.pollItems("polling", "worker-1", 10, 0).isEmpty());
+        assertEquals(List.of("msg-1"), service.pollItems("polling", "worker-2", 10, 0).stream()
+                .map(item -> item.content().messageId())
                 .toList());
     }
 
@@ -156,15 +157,15 @@ class TransportDeliveryServiceTest {
         TransportDeliveryService service = service();
 
         assertEquals(TransportDeliveryPollStatus.EMPTY,
-                service.pollEnvelopeResult("polling", "worker-1", 10, 0).getStatus());
+                service.pollItemResult("polling", "worker-1", 10, 0).getStatus());
         assertEquals(TransportDeliveryPollStatus.INVALID_REQUEST,
-                service.pollEnvelopeResult("polling", " ", 10, 0).getStatus());
+                service.pollItemResult("polling", " ", 10, 0).getStatus());
     }
 
     @Test
     void statsExposeDeliveryStoreSnapshot() {
         TransportDeliveryService service = new TransportDeliveryService(new InMemoryTransportDeliveryStore(10));
-        service.enqueue("polling", List.of(envelope("msg-1", "worker-1")));
+        service.enqueue("polling", List.of(request("msg-1", "worker-1")));
 
         TransportDeliveryServiceStats stats = service.stats();
 
@@ -184,8 +185,8 @@ class TransportDeliveryServiceTest {
 
         List<DispatchOutcome> outcomes = service.sendDirect(
                 "websocket",
-                List.of(envelope("msg-1", "worker-1")),
-                envelope -> true,
+                List.of(request("msg-1", "worker-1")),
+                request -> true,
                 "unavailable"
         );
 
@@ -202,7 +203,7 @@ class TransportDeliveryServiceTest {
     void queuedDeliveryDoesNotPopulateDirectCounters() {
         TransportDeliveryService service = service();
 
-        List<DispatchOutcome> outcomes = service.enqueue("polling", List.of(envelope("msg-1", "worker-1")));
+        List<DispatchOutcome> outcomes = service.enqueue("polling", List.of(request("msg-1", "worker-1")));
 
         TransportDeliveryServiceStats stats = service.stats();
         assertEquals(List.of(DispatchOutcomeStatus.QUEUED), statuses(outcomes));
@@ -219,14 +220,14 @@ class TransportDeliveryServiceTest {
     @Test
     void shutdownStopsQueuedDelivery() {
         TransportDeliveryService service = service();
-        service.enqueue("polling", List.of(envelope("msg-1", "worker-1")));
+        service.enqueue("polling", List.of(request("msg-1", "worker-1")));
 
         service.shutdown();
 
         assertEquals(0, service.stats().getQueuedItems());
-        assertTrue(service.pollEnvelopes("polling", "worker-1", 10, 0).isEmpty());
+        assertTrue(service.pollItems("polling", "worker-1", 10, 0).isEmpty());
         assertEquals(DispatchOutcomeStatus.UNAVAILABLE,
-                service.enqueue("polling", List.of(envelope("msg-2", "worker-1"))).get(0).getStatus());
+                service.enqueue("polling", List.of(request("msg-2", "worker-1"))).get(0).getStatus());
     }
 
     private TransportDeliveryService service() {
@@ -237,41 +238,28 @@ class TransportDeliveryServiceTest {
         return outcomes.stream().map(DispatchOutcome::getStatus).toList();
     }
 
-    private TransportDispatchEnvelope envelope(String messageId, String workerId) {
-        return envelope("delivery-" + messageId, "polling", "group-route-1", messageId, workerId);
+    private AdapterDispatchRequest request(String messageId, String workerId) {
+        return request("delivery-" + messageId, "polling", "group-route-1", messageId, workerId);
     }
 
-    private TransportDispatchEnvelope invalidEnvelope(String messageId, String workerId) {
-        return envelope("delivery-" + messageId, "polling", " ", messageId, workerId);
-    }
-
-    private TransportDispatchEnvelope envelope(String deliveryId,
-                                              String adapterId,
-                                              String routeKey,
-                                              String messageId,
-                                              String workerId) {
-        return new TransportDispatchEnvelope(
+    private AdapterDispatchRequest request(String deliveryId,
+                                           String adapterId,
+                                           String routeKey,
+                                           String messageId,
+                                           String workerId) {
+        return new AdapterDispatchRequest(
                 deliveryId,
+                adapterId,
                 workerId,
-                new TransportPacket(
-                        TransportPacket.CURRENT_VERSION,
-                        deliveryId,
-                        "trace-" + messageId,
-                        PacketType.TASK_DISPATCH,
-                        adapterId,
-                        routeKey,
+                new TaskDispatchContent(
                         "task-1",
                         messageId,
-                        "attempt-" + messageId,
                         "crawler.fetch-page",
-                        TransportPacket.JSON_CONTENT_TYPE,
-                        Map.of(
-                                TransportPacket.PAYLOAD_WORKER_ID, workerId == null ? "" : workerId,
-                                TransportPacket.PAYLOAD_BATCH_ID, "batch-1",
-                                TransportPacket.PAYLOAD_INPUT, Map.of("target", "target-1"),
-                                TransportPacket.PAYLOAD_SHARED_CONFIG, Map.of()
-                        )
+                        Map.of("target", "target-1"),
+                        Map.of()
                 ),
+                new TaskDispatchExecutionContext("attempt-" + messageId, 1, 0, "batch-1", null, null, null),
+                new AdapterEndpoint(routeKey, "node-1", "conn-" + workerId, 10_000L),
                 1L
         );
     }
